style: fix responsive layout issue in message-box component for small screens

--- a/src/app/components/message-box/message-box.component.scss
+++ b/src/app/components/message-box/message-box.component.scss
@@ -8,10 +8,14 @@
     gap: 20px;
     margin: 45px 0;
 
-    @media screen and (max-width: 880px) {
+    @media screen and (min-width: 768px) and (max-width: 880px),
+    screen and (max-width: 450px) {
+        margin: 20px 0;
         flex-direction: column;
         height: auto;
+        gap: 6px;
     }
+
 
     @media screen and (max-width: 768px) and (max-height: 600px) {
         margin: 15px 0;
@@ -178,10 +182,12 @@
     justify-content: space-between;
     gap: 4px;
 
-    @media screen and (max-width: 880px) {
+    @media screen and (min-width: 768px) and (max-width: 880px),
+    screen and (max-width: 450px) {
         width: auto;
         height: fit-content;
         align-items: center;
+        padding: 5px 0 0 0;
     }
 
     button {
@@ -216,7 +222,8 @@
         display: flex;
         justify-content: center;
 
-        @media screen and (max-width: 880px) {
+        @media screen and (min-width: 768px) and (max-width: 880px),
+        screen and (max-width: 450px) {
             object-fit: contain;
         }
 
